--- a/.gitmodules
+++ b/.gitmodules
@@ -13,7 +13,7 @@
 	url = https://github.com/duskmoon314/rv-csr-test.git
 [submodule "rCore-N"]
 	path = rCore-N
-	url = https://github.com/duskmoon314/rCore-N.git
+	url = https://github.com/KveinAxel/rCore-N.git
 [submodule "labeled-RISC-V-N"]
 	path = labeled-RISC-V-N
 	url = https://github.com/Gallium70/labeled-RISC-V-N.git
@@ -21,3 +21,6 @@
 	path = rustsbi-qemu
 	url = https://github.com/duskmoon314/rustsbi-qemu.git
 	branch = legacy-multicore
+[submodule "async-syscall"]
+	path = async-syscall
+	url = https://github.com/KveinAxel/async-syscall.git
